# news-signals-datasets

./: .gitignore  404.html  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  dataset-generation.md  index.html  mkdocs.yml  objects.inv  project.json  requirements.txt  setup.py  sitemap.xml
aylien_ts_datasets/: newsapi.py  numerai_signals.py  yfinance_timeseries.py
docs/: index.md  news_signals.md
news_signals/: anomaly_detection.py  aql_builder.py  cli.py  data.py  dataset_transformations.py  exogenous_signals.py  generate_dataset.py  log.py  newsapi.py  plotting.py  representative_story.py  semantic_filters.py  signals.py  signals_dataset.py  summarization.py  technical_indicators.py  test_anomaly_detection.py  test_aql_builder.py  test_data.py  test_dataset_transformations.py  test_exogenous_signals.py  test_newsapi.py  test_representative_story.py  test_semantic_filters.py  test_signals.py  test_signals_dataset.py  test_summarization.py  test_yfinance.py  test_yfinance_temp.py  test_yfinance_utils.py  transform_dataset.py  users.py  wikidata_utils.py  yfinance_timeseries.py  yfinance_utils.py
research/: CreateEntityLists.ipynb  Creating_News_Signals.ipynb  Creating_News_Signals_Example.ipynb  Explore_News_Signals_Dataset.ipynb  prototype_wikimedia_pageviews_to_pandas_df.ipynb
research/hybrid-mds-wcep/: Makefile  README.md  pyproject.toml
research/hybrid-mds-wcep/examples/: articles.jsonl  example.py
research/hybrid-mds-wcep/hybrid_mds/: __init__.py  extractive.py  hybrid.py
resources/: dataset-config-example.json  dataset-config-nasdaq100.json  (+7 more)
(+127 files in other folders)
