[tool.poetry]
name = "hybrid-mds"
version = "0.1.0"
description = ""
authors = ["complementizer <demian@aylien.com>"]
readme = "README.md"
packages = [{include = "hybrid_mds"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
transformers = "^4.31.0"
spacy = "^3.6.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
